reduce mvn test out noise